# Teachers-and-Students

./: .gitignore  CMakeLists.txt  README.MD  badStudent.cpp  badStudent.h  exersize.cpp  exersize.h  goodStudent.cpp  goodStudent.h  helper.cpp  helper.h  human.cpp  human.h  main.cpp  middleStudent.cpp  middleStudent.h  teacher.cpp  teacher.h
