cmake_minimum_required(VERSION 3.14)
project(Teachers_and_Students)

set(CMAKE_CXX_STANDARD 14)

add_executable(Teachers_and_Students main.cpp human.cpp human.h goodStudent.cpp goodStudent.h exersize.cpp exersize.h middleStudent.cpp middleStudent.h helper.h badStudent.cpp badStudent.h helper.cpp teacher.cpp teacher.h)